pkg/controller/appdefinition/testdata/alias/expected.yaml.d/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: con1
  namespace: app-created-namespace
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/container-name": "con1"
    "acorn.io/managed": "true"
spec:
  selector:
    matchLabels:
      "acorn.io/app-namespace": "app-namespace"
      "acorn.io/app-name": "app-name"
      "acorn.io/container-name": "con1"
      "acorn.io/managed": "true"
  template:
    metadata:
      labels:
        "acorn.io/app-namespace": "app-namespace"
        "acorn.io/app-name": "app-name"
        "acorn.io/container-name": "con1"
        "acorn.io/managed": "true"
        "acorn.io/root-prefix": "app-name"
        "port-number.acorn.io/81": "true"
        "port-number.acorn.io/91": "true"
        "service-name.acorn.io/con1": "true"
        "service-name.acorn.io/svc1": "true"
      annotations:
        acorn.io/container-spec: '{"image":"foo","ports":[{"port":80,"protocol":"http","publish":true,"serviceName":"svc1","targetPort":81},{"port":80,"protocol":"http","targetPort":81},{"port":90,"protocol":"tcp","serviceName":"svc1","targetPort":91}]}'
    spec:
      imagePullSecrets:
        - name: con1-pull-1234567890ab
      terminationGracePeriodSeconds: 5
      enableServiceLinks: false
      automountServiceAccountToken: false
      containers:
        - name: con1
          image: "foo"
          readinessProbe:
            tcpSocket:
              port: 81
          ports:
            - containerPort: 81
              protocol: "TCP"
            - containerPort: 91
              protocol: "TCP"
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: con2
  namespace: app-created-namespace
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/container-name": "con2"
    "acorn.io/managed": "true"
spec:
  selector:
    matchLabels:
      "acorn.io/app-namespace": "app-namespace"
      "acorn.io/app-name": "app-name"
      "acorn.io/container-name": "con2"
      "acorn.io/managed": "true"
  template:
    metadata:
      labels:
        "acorn.io/app-namespace": "app-namespace"
        "acorn.io/app-name": "app-name"
        "acorn.io/container-name": "con2"
        "acorn.io/managed": "true"
        "acorn.io/root-prefix": "app-name"
        "port-number.acorn.io/81": "true"
        "port-number.acorn.io/91": "true"
        "service-name.acorn.io/con2": "true"
        "service-name.acorn.io/svc1": "true"
      annotations:
        acorn.io/container-spec: '{"image":"foo","ports":[{"port":80,"protocol":"http","publish":true,"serviceName":"svc1","targetPort":81},{"port":80,"protocol":"tcp","targetPort":81},{"port":90,"protocol":"tcp","serviceName":"svc1","targetPort":91}]}'
    spec:
      imagePullSecrets:
        - name: con2-pull-1234567890ab
      terminationGracePeriodSeconds: 5
      enableServiceLinks: false
      automountServiceAccountToken: false
      containers:
        - name: con2
          image: "foo"
          readinessProbe:
            tcpSocket:
              port: 81
          ports:
            - containerPort: 81
              protocol: "TCP"
            - containerPort: 91
              protocol: "TCP"
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: con3
  namespace: app-created-namespace
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/container-name": "con3"
    "acorn.io/managed": "true"
spec:
  selector:
    matchLabels:
      "acorn.io/app-namespace": "app-namespace"
      "acorn.io/app-name": "app-name"
      "acorn.io/container-name": "con3"
      "acorn.io/managed": "true"
  template:
    metadata:
      labels:
        "acorn.io/app-namespace": "app-namespace"
        "acorn.io/app-name": "app-name"
        "acorn.io/container-name": "con3"
        "acorn.io/managed": "true"
        "acorn.io/root-prefix": "app-name"
        "port-number.acorn.io/101": "true"
        "service-name.acorn.io/con3": "true"
        "service-name.acorn.io/svc2": "true"
      annotations:
        acorn.io/container-spec: '{"image":"foo","ports":[{"port":100,"protocol":"udp","publish":true,"serviceName":"svc2","targetPort":101},{"port":100,"protocol":"udp","targetPort":101}]}'
    spec:
      terminationGracePeriodSeconds: 5
      imagePullSecrets:
        - name: con3-pull-1234567890ab
      enableServiceLinks: false
      automountServiceAccountToken: false
      containers:
        - name: con3
          image: "foo"
          ports:
            - containerPort: 101
              protocol: "UDP"
