pkg/controller/appdefinition/testdata/alias/expected.yaml.d/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: svc1
  namespace: app-created-namespace
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/service-name": "svc1"
    "acorn.io/managed": "true"
  annotations:
    acorn.io/targets: '{"localhost":{"port":81,"service":"svc1"}}'
spec:
  rules:
    - host: localhost
      http:
        paths:
          - backend:
              service:
                name: svc1
                port:
                  number: 80
            path: /
            pathType: Prefix
