pkg/controller/appdefinition/testdata/alias/expected.yaml.d/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: con1
  namespace: app-created-namespace
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/service-name": "con1"
    "acorn.io/container-name": "con1"
    "acorn.io/managed": "true"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 81
      protocol: "TCP"
      appProtocol: "HTTP"
      name: "80"
  selector:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "port-number.acorn.io/81": "true"
    "service-name.acorn.io/con1": "true"
    "acorn.io/managed": "true"

---
kind: Service
apiVersion: v1
metadata:
  name: con2
  namespace: app-created-namespace
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/service-name": "con2"
    "acorn.io/container-name": "con2"
    "acorn.io/managed": "true"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 81
      protocol: "TCP"
      name: "80"
  selector:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "port-number.acorn.io/81": "true"
    "service-name.acorn.io/con2": "true"
    "acorn.io/managed": "true"

---
kind: Service
apiVersion: v1
metadata:
  name: con3
  namespace: app-created-namespace
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/service-name": "con3"
    "acorn.io/container-name": "con3"
    "acorn.io/managed": "true"
spec:
  type: ClusterIP
  ports:
    - port: 100
      targetPort: 101
      protocol: "UDP"
      name: "100"
  selector:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "port-number.acorn.io/101": "true"
    "service-name.acorn.io/con3": "true"
    "acorn.io/managed": "true"

---
kind: Service
apiVersion: v1
metadata:
  name: svc1
  namespace: app-created-namespace
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/service-name": "svc1"
    "acorn.io/container-name": "con1"
    "acorn.io/managed": "true"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 81
      protocol: "TCP"
      appProtocol: "HTTP"
      name: "80"
    - port: 90
      targetPort: 91
      protocol: "TCP"
      name: "90"
  selector:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "port-number.acorn.io/81": "true"
    "port-number.acorn.io/91": "true"
    "service-name.acorn.io/svc1": "true"
    "acorn.io/managed": "true"

---
kind: Service
apiVersion: v1
metadata:
  name: svc2
  namespace: app-created-namespace
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/service-name": "svc2"
    "acorn.io/container-name": "con3"
    "acorn.io/managed": "true"
spec:
  type: ClusterIP
  ports:
    - port: 100
      targetPort: 101
      protocol: "UDP"
      name: "100"
  selector:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "port-number.acorn.io/101": "true"
    "service-name.acorn.io/svc2": "true"
    "acorn.io/managed": "true"

---
kind: Service
apiVersion: v1
metadata:
  name: svc2-publish-1234567890ab
  namespace: app-created-namespace
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/service-name": "svc2"
    "acorn.io/service-publish": "true"
    "acorn.io/container-name": "svc2"
    "acorn.io/managed": "true"
spec:
  type: LoadBalancer
  ports:
    - port: 100
      targetPort: 101
      protocol: "UDP"
      name: "100"
  selector:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "port-number.acorn.io/101": "true"
    "service-name.acorn.io/svc2": "true"
    "acorn.io/managed": "true"
---
